--- a/R_demo.Rmd
+++ b/R_demo.Rmd
@@ -26,8 +26,8 @@ for(i in seq(2, 10, 2)){
 }
 
 x <- runif(100, 0, 1) # as in 'random uniform' between 0 and 1
-y <- runif(100)       # between 0 and 1 actually the default...
-plot(x,y)
+plot(x, exp(x))
+plot(x, exp(x), main = "Exponential Function", ylim = c(0, 3))
 ```
 
 # Printing...
@@ -37,15 +37,17 @@ When knitting to `PDF`, a bit of care is needed to stay in the margins. `strwrap
 
 ```{r}
 
-hacked <- "NEW YORK (AP) — Facebook reported a major security breach in which 50 million user accounts were accessed by unknown attackers. The stolen data allowed the attackers to 'seize control' of those user accounts, Facebook said. Facebook has logged out the 50 million breached users — plus another 40 million who were vulnerable to the attack. Users don’t need to change their Facebook passwords, it said. Facebook says it doesn’t know who is behind the attacks or where they’re based. In a call with reporters on Friday, CEO Mark Zuckerberg said that the company doesn’t know yet if any of the accounts that were hacked were misused."
+hacked <- "NEW YORK (AP) — Facebook reported a major security breach in which 50 million user accounts were accessed by unknown attackers. The stolen data allowed the attackers to 'seize control' of those user accounts, Facebook said. Facebook has logged out the 50 million breached users — plus another 40 million who were vulnerable to the attack. Users don’t need to change their Facebook passwords, it said. Facebook says it doesn’t know who is behind the attacks or where they’re based. In a call with reporters on Friday, CEO Mark Zuckerberg said that the company doesn’t know yet if any of the accounts that were hacked were misused."  
 
+# MATT O’BRIEN AND MAE ANDERSON, AP NEWS 9/28/18  
+# https://bit.ly/2InJeXx
 ```
 
-And if you don't want line numbers, use `cat()` (as in `concatenate`).  
-
 ```{r}
-
 strwrap(hacked, 90)    # 90 characters per line
+```
+And if you don't want line numbers, use `cat()` (as in `concatenate`).
+```{r}
 cat(strwrap(hacked, 90), sep = "\n")  # '\n' means 'new line'
 ```
 
@@ -92,7 +94,15 @@ chars <- chars[chars %in% LETTERS] # retains upper case letters only...
 table(chars)
 sort(table(chars))
 barplot(table(chars))
+```
 
+Or the same plot again with smaller labels (`cex` abbreviates 'character expansion' relative to default size of 1.)
+```{r}
+barplot(table(chars), cex.names = 0.75)
+
+```
+# Bigrams and Trigrams
+```{r}
 bigrams <- matrix(nrow = length(chars)/2)
 for(i in 1:length(chars)/2){
   bigrams[i] <- paste(chars[i:(i+1)], collapse="")
